--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 body { font-family: 'Barlow', sans-serif; }
+@keyframes test{
+    from {size: 100%;}
+    to {size: 300%;}
+}
+
+h1 {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    animation-name: test;
+    animation-duration: 5s;
+    animation-iteration-count: 4;
+    animation-direction: alternate;
+}
