--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body { font-family: 'Barlow', sans-serif; }
     from {background-color: white;}
     to {background-color: rgb(139, 224, 139);}
 }
-
+/*
 h1 {
     width: 100%;
     height: 100%;
@@ -13,3 +13,4 @@ h1 {
     animation-iteration-count: 40;
     animation-direction: alternate;
 }
+*/
