--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body { font-family: 'Barlow', sans-serif; }
-@keyframes test{
+@keyframes testing1{
     from {background-color: white;}
     to {background-color: rgb(139, 224, 139);}
 }
@@ -8,7 +8,7 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: white;
-    animation-name: test;
+    animation-name: testing1;
     animation-duration: 2s;
     animation-iteration-count: 3;
     animation-direction: reverse;
@@ -16,7 +16,7 @@ h1 {
     
 }
 
-@keyframes test{
+@keyframes testing2{
     from {background-color: white;}
     to {background-color: rgb(223, 220, 68);}
 }
@@ -25,7 +25,7 @@ h2 {
     width: 100%;
     height: 100%;
     background-color: white;
-    animation-name: test;
+    animation-name: testing2;
     animation-duration: 2s;
     animation-iteration-count: 3;
     animation-direction: reverse;
@@ -34,16 +34,16 @@ h2 {
     
 }
 
-@keyframes test{
+@keyframes testing3{
     from {background-color: white;}
     to {background-color: rgb(194, 47, 47);}
 }
 
-p {
+h3 {
     width: 100%;
     height: 100%;
     background-color: white;
-    animation-name: test;
+    animation-name: testing3;
     animation-duration: 2s;
     animation-iteration-count: 3;
     animation-direction: reverse;
