--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body { font-family: 'Barlow', sans-serif; }
     to {background-color: rgb(139, 224, 139);}
 }
 
-h3 {
+.green {
     width: 100%;
     height: 100%;
     background-color: white;
@@ -21,7 +21,7 @@ h3 {
     to {background-color: rgb(223, 220, 68);}
 }
 
-h2 {
+.yellow {
     width: 100%;
     height: 100%;
     background-color: white;
@@ -39,7 +39,7 @@ h2 {
     to {background-color: rgb(194, 47, 47);}
 }
 
-h1 {
+.red {
     width: 100%;
     height: 100%;
     background-color: white;
