--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,6 @@
 body { font-family: 'Barlow', sans-serif; }
-@keyframes testing1{
-    from {background-color: white;}
-    to {background-color: rgb(139, 224, 139);}
+
+.title {
+align-content: center;
+
 }
-
-.green {
-    width: 1%;
-    height: 100%;
-    background-color: white;
-    animation-name: testing1;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
-    animation-direction: reverse;
-
-    
-}
-
-@keyframes testing2{
-    from {background-color: white;}
-    to {background-color: rgb(223, 220, 68);}
-}
-
-.yellow {
-    width: 1%;
-    height: 100%;
-    background-color: white;
-    animation-name: testing2;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
-    animation-direction: reverse;
-    animation-delay: 1s;
-
-    
-}
-
-@keyframes testing3{
-    0% {background-color: white;}
-    1% {background-color: rgb(194, 47, 47);}
-    100% {background-color: rgb(194, 47, 47);}
-}
-
-.red {
-    width: 1%;
-    height: 100%;
-    background-color: white;
-    animation-name: testing3;
-    animation-duration: 6s;
-    animation-iteration-count: 1;
-    animation-direction: reverse;
-    animation-delay: 2s;
-
-    
-}
-@keyframes testing4{
-    from {margin-left: 95%;}
-    to {margin-left: 5%;}
-}
-
-.car {
-    background-color: white;
-    animation-name: testing4;
-    animation-duration: 8s;
-    animation-iteration-count: 1;
-    animation-delay: 0s;
-
-
-    
-}
-
-
