--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,6 @@ body { font-family: 'Barlow', sans-serif; }
 	bottom: 0;
 	word-spacing: 5px;
 	width: 100%;
-	test-align: center;
+	text-align: center;
 }
 
